# string-file-saver

./: .CMakeLists.txt  CMakeLists.txt  протокол хранения ключей и значений в файле.odt
include/: read_&write.h
src/: main.c  read_&write.c
